# Aerion-DAW

./: .cursorrules  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakePresets.json  CONTRIBUTING.md  README.md  ROADMAP.md  STATUS.md
.github/workflows/: package-release.yml
AerionDawCpp/: CMakeLists.txt  CMakePresets.json
AerionDawCpp/CMake/: CPackPruneStaging.cmake
AerionDawCpp/Documentation/: MANUAL_TEST_CHECKLIST.md  RELEASE.md  RELEASE_NOTES_v0.2.0.md  ROADMAP.md  STATUS.md  USER_MANUAL.md  UX-redesign.md  testing.md
AerionDawCpp/Source/: AIManager.cpp  AIManager.h  AerionTooltipWindow.cpp  AerionTooltipWindow.h  AudioEngine.cpp  AudioEngine.h  GoogleDriveClient.cpp  GoogleDriveClient.h  LogoComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  ProjectData.cpp  ProjectData.h  SplashWindow.h  UIComponents.h
AerionDawCpp/Source/Export/: MixdownExportDialog.cpp  MixdownExportDialog.h  MixdownExportJob.cpp  MixdownExportJob.h  WaveformPreviewComponent.h
AerionDawCpp/Source/UI/: LookAndFeel.h  Primitives.h  ThemeTokens.h  ThemeTypefaces.cpp  ThemeTypefaces.h  UIComponents.h
